# creditx

./: .gitignore  README.md  main.py  pyproject.toml  weights.yaml
app/: config.py  data_cache.py  features.py  main.py  models.py  pricing.py  service.py
app/api/: __init__.py  common.py  policy.py  pricing.py  renewals.py  system.py  triage.py
frontend/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
frontend/__tests__/: button.test.tsx
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(routes)/pricing/: page.tsx
frontend/app/(routes)/renewals/: page.tsx
frontend/app/(routes)/triage/: page.tsx
frontend/components/: app-shell.tsx  data-grid.tsx  policy-form.tsx  pricing-card.tsx  reasons-list.tsx  submission-form.tsx  upload-panel.tsx
frontend/components/ui/: button.tsx  card.tsx
frontend/hooks/: usePersistentState.test.ts  usePersistentState.ts
frontend/lib/: api.ts
sample_data/: renewals.csv  submissions.csv
scripts/: eval_demo.py
tests/: test_csv_upload.py  test_health_version.py  test_pricing.py  test_renewals.py  test_system.py  test_triage.py
